part2/2.06.ConfigMap/ping-pong_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
  labels:
    name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: k3d-myregistry.localhost:12345/ping-pong
