part2/2.06.ConfigMap/ping-pong_service.yml
apiVersion: v1
kind: Service
metadata:
  name: pingpongsvc
  namespace: exercises
  labels:
    name: pingpongsvc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
